--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,16 @@
 /* Always set the map height explicitly to define the size of the div
 * element that contains the map. */
+
 #map {
-height: 200px;
-background-color: beige;
+    height: 200px;
+    background-color: beige;
 }
+
 /* Optional: Makes the sample page fill the window. */
-html, body {
-height: 100%;
-margin: 0;
-padding: 0;
+
+html,
+body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
